--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,70 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import "~@angular/material/theming";
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$pokedex-primary: mat-palette($mat-indigo);
+$pokedex-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$pokedex-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$pokedex-theme: mat-light-theme(
+  (
+    color: (
+      primary: $pokedex-primary,
+      accent: $pokedex-accent,
+      warn: $pokedex-warn,
+    ),
+  )
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($pokedex-theme);
+
+@import "~normalize.css";
+@import "~bootstrap/dist/css/bootstrap-grid.css";
+@import url("https://fonts.googleapis.com/css2?family=Oxygen&display=swap");
+
+body {
+  font-family: Oxygen, Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background-color: #f1f1f1;
+  background: rgb(49, 103, 177);
+  background: linear-gradient(
+    90deg,
+    rgba(49, 103, 177, 1) 0%,
+    rgba(252, 176, 69, 1) 100%
+  );
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.loading {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding: 50px 0;
+}
